fixed image stretching

--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,9 @@ body {
         font-size: 0.8rem;
     }
     .picture{
-        max-width: 100%;
+        
         text-align: center;
+
     }
   }
 
